--- a/scripts/css/main.scss
+++ b/scripts/css/main.scss
@@ -1,13 +1,12 @@
 body,
-html, #mainPage, #canvas {
+html,
+#mainPage,
+#canvas {
     height: 100%;
     width: 100%;
 }
 
-.nodes{
-
-}
-
-.edges{
-	
+svg {
+    .nodes {}
+    .edges {}
 }
