--- a/scripts/css/main.scss
+++ b/scripts/css/main.scss
@@ -1,13 +1,32 @@
 body,
 html,
-#mainPage,
-#canvas {
+#mainPage {
     height: 100%;
     width: 100%;
+    overflow: hidden;
+}
+
+#canvas {
+    height: 100%;
 }
 
 svg {
-    .nodes {
-    }
+    .nodes {}
     .edges {}
+}
+
+.info-section {
+    height: 100%;
+    width: 0px; 
+    position: fixed; 
+    right: 0px;
+    top:0px;
+    z-index: 1; 
+    background-color: white; 
+    transition: 0.5s; 
+    box-shadow: 10px 10px 5px black;
+    .datastuff{
+        padding-top: 20px;
+    }
+
 }
