--- a/scripts/css/main.css
+++ b/scripts/css/main.css
@@ -3,10 +3,19 @@ html,
 #mainPage {
   height: 100%;
   width: 100%;
-  overflow: hidden; }
+  overflow: hidden;
+  background-color: #e5dee1; }
 
 #canvas {
   height: 100%; }
+
+svg .node-label {
+  color: #ffffff;
+  font-family: 'Raleway', sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  text-align: center;
+  text-transform: uppercase; }
 
 .info-section {
   height: 100%;
@@ -17,8 +26,27 @@ html,
   z-index: 1;
   background-color: white;
   transition: 0.5s;
-  box-shadow: 10px 10px 5px black; }
+  box-shadow: 0px 0 5px 2px #888888; }
   .info-section .datastuff {
-    padding-top: 20px; }
+    padding-top: 40px; }
+    .info-section .datastuff h1 {
+      padding-top: 10px;
+      color: #111;
+      font-family: 'Helvetica Neue', sans-serif;
+      font-size: 72px;
+      font-weight: bold;
+      letter-spacing: -1px;
+      line-height: 1;
+      text-align: center; }
+    .info-section .datastuff .main-desc-body {
+      position: absolute;
+      margin: 0px 25px 0px 10px; }
+      .info-section .datastuff .main-desc-body h3 {
+        color: #333333;
+        font-family: 'Helvetica', sans-serif; }
+      .info-section .datastuff .main-desc-body .info-tags {
+        padding-top: 25px; }
+        .info-section .datastuff .main-desc-body .info-tags .tag-body {
+          padding-bottom: 2px; }
 
 /*# sourceMappingURL=main.css.map */
