--- a/scripts/css/main.css
+++ b/scripts/css/main.css
@@ -3,7 +3,6 @@ html,
 #mainPage {
   height: 100%;
   width: 100%;
-  overflow: hidden;
   background-color: #EBEBEB; }
 
 #canvas {
@@ -37,10 +36,12 @@ svg .node-label {
   z-index: 1;
   background-color: #1b1a1c;
   transition: 0.5s;
-  box-shadow: 0px 0 5px 2px #888888; }
+  box-shadow: 0px 0 5px 2px #888888;
+  overflow-x: hidden;
+  overflow-y: hidden; }
   .info-section .datastuff {
     width: 50%;
-    padding-top: 50px;
+    padding-top: 40px;
         /*         h1 {
             padding-top: 10px;
             color: $bgcol;
@@ -54,18 +55,19 @@ er;
         } */ }
     .info-section .datastuff img {
       display: block;
-      width: 330px;
-      height: 330px;
+      width: 320px;
+      height: 320px;
       border-style: solid;
       border-width: 5px;
       border-color: #EBEBEB; }
     .info-section .datastuff h1 {
       color: #EBEBEB;
-      font-family: "Trebuchet MS";
-      font-size: 72px;
+      font-family: "Verdana";
+      font-size: 60px;
+      letter-spacing: -2px;
       font-weight: bold;
-      margin-bottom: 10px;
-      margin-top: 40px;
+      margin-bottom: 5px;
+      margin-top: 20px;
       text-align: center;
       text-shadow: 0 3px 3px black; }
     .info-section .datastuff .main-desc-body {
@@ -73,12 +75,13 @@ er;
       position: absolute;
       margin: 0px 27px 0px 25px; }
       .info-section .datastuff .main-desc-body h3 {
+        font-size: 18px;
         font-family: 'Helvetica', sans-serif; }
       .info-section .datastuff .main-desc-body .info-tags {
         padding-top: 35px;
         text-align: center;
-        padding-right: 12%;
-        padding-bottom: 15px; }
+        padding-right: 5%;
+        padding-bottom: 10px; }
         .info-section .datastuff .main-desc-body .info-tags .rib-group {
           padding-bottom: 25px; }
           .info-section .datastuff .main-desc-body .info-tags .rib-group .rib-wrap {
@@ -86,10 +89,10 @@ er;
             font-size: 12px;
             padding-right: 25px;
             padding-left: 25px;
-            padding-bottom: 5px; }
+            padding-bottom: 3px; }
       .info-section .datastuff .main-desc-body .ext-links {
         text-align: center;
-        padding-right: 12%; }
+        padding-right: 5%; }
         .info-section .datastuff .main-desc-body .ext-links a {
           display: inline-block;
           font-size: 25px; }
