--- a/src/scripts/css/main.scss
+++ b/src/scripts/css/main.scss
@@ -61,6 +61,7 @@ svg {
             border-style: solid;
             border-width: 5px;
             border-color: $bgcol;
+            background-color: white;
         }
         /*         h1 {
             padding-top: 10px;
@@ -76,13 +77,13 @@ er;
         h1 {
             color: $bgcol;
             font-family: "Verdana";
-            font-size: 60px;
+            font-size: 48px;
             letter-spacing: -2px;
             font-weight: bold;
             margin-bottom: 5px;
             margin-top: 20px;
             text-align: center;
-            text-shadow: 0 3px 3px black;
+            text-shadow: 0 5px 5px black;
         }
         .main-desc-body {
             color: $descfont;
