--- a/src/scripts/css/main.css
+++ b/src/scripts/css/main.css
@@ -3,7 +3,9 @@ html,
 #mainPage {
   height: 100%;
   width: 100%;
-  background-color: #EBEBEB; }
+  background-color: #EBEBEB;
+  overflow-x: hidden;
+  overflow-y: hidden; }
 
 #canvas {
   height: 100%; }
@@ -35,10 +37,10 @@ svg .node-label {
   top: 0px;
   z-index: 1;
   background-color: #1b1a1c;
-  transition: 0.5s;
-  box-shadow: 0px 0 5px 2px #888888;
+  overflow-y: auto;
   overflow-x: hidden;
-  overflow-y: hidden; }
+  transition: 0.5s;
+  box-shadow: 0px 0 5px 2px #888888; }
   .info-section .datastuff {
     width: 50%;
     padding-top: 40px;
@@ -55,8 +57,8 @@ er;
         } */ }
     .info-section .datastuff img {
       display: block;
-      width: 320px;
-      height: 320px;
+      width: 330px;
+      height: 330px;
       border-style: solid;
       border-width: 5px;
       border-color: #EBEBEB;
@@ -65,6 +67,7 @@ er;
       color: #EBEBEB;
       font-family: "Verdana";
       font-size: 48px;
+      font-size: 2.2vw;
       letter-spacing: -2px;
       font-weight: bold;
       margin-bottom: 5px;
@@ -77,6 +80,7 @@ er;
       margin: 0px 27px 0px 25px; }
       .info-section .datastuff .main-desc-body h3 {
         font-size: 18px;
+        font-size: 0.95vw;
         font-family: 'Helvetica', sans-serif; }
       .info-section .datastuff .main-desc-body .info-tags {
         padding-top: 35px;
