--- a/src/scripts/css/main.scss
+++ b/src/scripts/css/main.scss
@@ -6,6 +6,7 @@ html,
 #mainPage {
     height: 100%;
     width: 100%;
+    display: block;
     background-color: $bgcol;
     overflow-x: hidden;
     overflow-y: hidden;
@@ -16,7 +17,10 @@ html,
 }
 
 svg {
-    .nodes {}
+    .nodes {
+        stroke: white;
+        stroke-width: 2px;
+    }
     .edges {}
     .node-label {
         color: #ffffff;
@@ -24,19 +28,25 @@ svg {
         font-size: 14px;
         font-weight: 700;
         text-transform: uppercase;
+        stroke-width: 0px;
     }
+}
+
+.context-custom {
+    font-size: 18px !important;
 }
 
 .instruction-box {
     z-index: 1;
+    text-align: center;
     position: absolute;
-    top: 0;
-    left: 0;
-    transform: translateY(50px);
+    top: 10%;
+    left:50%;
+    transform: translate(-50%,0%);
     h4 {
         color: #333333;
         font-family: 'Bitter', sans-serif;
-        font-size: 18px;
+        font-size: 28px;
         font-weight: bold;
     }
 }
@@ -54,12 +64,12 @@ svg {
     transition: 0.5s;
     box-shadow: 0px 0 5px 2px #888888;
     .datastuff {
-        width: 50%;
+        width: 40%;
         padding-top: 40px;
         img {
             display: block;
-            width: 330px;
-            height: 330px;
+            width: 50%;
+            height: 50%;
             border-style: solid;
             border-width: 5px;
             border-color: $bgcol;
@@ -92,11 +102,11 @@ er;
             color: $descfont;
             h3 {
                 font-size: 18px;
-                font-size: 0.95vw;
+                font-size: 1.1vw;
                 font-family: 'Helvetica', sans-serif;
             }
             position: absolute;
-            margin: 0px 27px 0px 25px;
+            margin: 0px 5% 0px 5%;
             .info-tags {
                 padding-top: 35px;
                 text-align: center;
