--- a/src/scripts/templates/instruc.html
+++ b/src/scripts/templates/instruc.html
@@ -1,5 +1,2 @@
-<div class="col-md-4 col-md-offset-2">
-    <h4>
-Welcome to my website! You can now view me as a graph. Click to get details on a node and right click to expand a node. 
-</h4>
-</div>
+<h4> Visualize me as a graph! </h4> 
+<h4> Click on the node to begin. </h4>
