--- a/scripts/css/main.css
+++ b/scripts/css/main.css
@@ -40,9 +40,9 @@ svg .node-label {
 
 .info-section {
   height: 100%;
-  width: 0px;
-  position: fixed;
-  right: 0px;
+  width: 33%;
+  position: absolute;
+  right: -33%;
   top: 0px;
   z-index: 1;
   background-color: #1b1a1c;
@@ -51,23 +51,11 @@ svg .node-label {
   transition: 0.5s;
   box-shadow: 0px 0 5px 2px #888888; }
   .info-section .datastuff {
-    width: 40%;
     padding-top: 40px;
-        /*         h1 {
-            padding-top: 10px;
-            color: $bgcol;
-            font-family: 'Helvetica Neue', sans-serif;
-            font-size: 72px;
-            font-weight: bold;
-            letter-spacing: -1px;
-            line-height: 1;
-            text-align: cent
-er;
-        } */ }
+    display: block; }
     .info-section .datastuff img {
-      display: block;
-      width: 50%;
-      height: 50%;
+      width: 40%;
+      height: 40%;
       border-style: solid;
       border-width: 3px;
       border-color: #EBEBEB;
@@ -85,11 +73,11 @@ er;
       text-shadow: 0 5px 5px black; }
     .info-section .datastuff .main-desc-body {
       color: #BFBFBF;
-      position: absolute;
-      margin: 0px 5% 0px 5%; }
+      display: block;
+      margin: 0px 9% 0px 10%; }
       .info-section .datastuff .main-desc-body h3 {
         font-size: 18px;
-        font-size: 1.1vw;
+        font-size: 1vw;
         font-family: 'Helvetica', sans-serif; }
       .info-section .datastuff .main-desc-body .info-tags {
         padding-top: 35px;
