--- a/scripts/templates/instruc.html
+++ b/scripts/templates/instruc.html
@@ -1,3 +1,3 @@
-<h4> Hi, I'm Ankai. </h4> 
-<h4> Visualize me as a graph! </h4> 
+<h4> Hi, I'm Ankai. Visualize me as a graph! </h4> 
+<h4> Freely move/drag the nodes around with your mouse. </h4>  
 <h4> Click on the node to begin. </h4>
